[package]
name = "boton"
version = "0.1.0"
authors = ["wwared"]
edition = "2018"

[profile.release]
lto = "fat"

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
nom = "6"
log = "0.4"
env_logger = "0.8"
anyhow = "1"
tokio-native-tls = "0.3.0"
ron = "*"
serde = "1"
reqwest = { version = "0.11.0", features = ["native-tls", "gzip", "brotli", "json"] }
serde_json = "1.0.61"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.42"
