cargo-features = ["strip"]

[package]
name = "boton"
version = "0.1.0"
authors = ["wwared"]
edition = "2018"

[profile.release]
lto = "fat"
opt-level = 3
debug = 0
strip = "symbols"

[dependencies]
anyhow = "1"
async-trait = "0.1.42"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.8"
log = "0.4"
nom = "6"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11.0", features = ["native-tls", "gzip", "brotli", "json"] }
ron = "*"
serde = "1"
serde_json = "1.0.61"
tokio = { version = "1", features = ["full", "parking_lot"] }
tokio-native-tls = "0.3.0"
